# wildfire-nowcast

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT.md  CONTRIBUTING.md  Makefile  PROJECT.md  README.md  RUNBOOK.md  TASK_QUEUE.json  TODO.md  docker-compose.yml  edit_pptx.py  read_pptx.py
.claude/: settings.local.json
api/: Dockerfile  __init__.py  alembic.ini  config.py  db.py  errors.py  main.py  pyproject.toml
api/aois/: __init__.py  repo.py
api/core/: __init__.py  grid.py
api/exports/: map_renderer.py  repo.py  worker.py
api/fires/: __init__.py  grid_mapping.py  landcover.py  repo.py  scoring.py  service.py
api/forecast/: __init__.py  repo.py  worker.py
api/migrations/: env.py
api/migrations/versions/: 1ef68811334b_initial_schema_postgis.py  20251206_add_weather_runs.py  20251207_add_terrain_metadata.py  20251208_grid_fields.py  20251213_add_terrain_features_metadata.py  20251228_spread_forecasts.py  20260119_add_false_source_masked.py  20260119_add_fire_likelihood.py  20260119_add_jit_forecast_jobs.py  20260119_add_landcover_score.py  20260119_add_mvt_fires_likelihood_filter.py  20260119_add_persistence_score.py  20260119_add_terrain_bbox_index.py  20260119_add_weather_bbox_index.py  20260119_add_weather_score.py  20260119_update_mvt_fires_likelihood.py  20260120_drop_mvt_fires_overloads.py  20260130_add_fire_perimeters.py  29a201e56491_add_export_jobs_table.py  2c8fb90854b0_.py  37962c109cd5_add_fire_detections_schema.py  4757a7deda9f_add_fire_labels_and_industrial_sources.py  56502d0fdf18_add_aois_table.py  b8e90cee90c8_add_confidence_score_column.py  b9c3e5f427af_add_dedupe_and_counts.py  ca7fc82ff882_add_mvt_functions.py  d46889070598_update_mvt_fires_props.py
api/risk/: __init__.py  grid.py
api/routes/: __init__.py  aois.py  exports.py  fires.py  forecast.py  internal.py  risk.py  tiles.py
api/terrain/: __init__.py  dem_loader.py  features_loader.py  features_math.py  features_repo.py  repo.py  validate.py  window.py
api/tests/: conftest.py  test_aois_endpoint.py  test_exports_endpoint.py  test_fire_false_source_masking.py  test_fire_grid_mapping.py  test_fire_landcover_scoring.py  test_fire_likelihood_integration.py  test_fire_likelihood_scoring.py  test_fire_map_contract.py  test_fire_persistence_scoring.py  test_fire_repo_denoiser_filter.py  test_fire_repo_false_source_filter.py  test_fire_repo_scoring_updates.py  test_fire_service_denoiser_options.py  test_fire_service_empty_window.py  test_fire_weather_plausibility.py  test_fire_weather_scoring_integration.py  test_fires_endpoint.py  test_forecast_endpoint.py  test_grid.py  test_health.py  test_jit_forecast_integration.py  test_risk_endpoint.py  test_terrain_alignment.py  test_terrain_features_math.py  test_tiles_endpoint.py  test_windows.py
ingest/: __init__.py  config.py  dem_preprocess.py  firms_backfill.py  firms_client.py  firms_ingest.py  industrial_sources_ingest.py  logging_utils.py  models.py  nifc_perimeters_ingest.py  pyproject.toml  repository.py  spread_forecast.py  spread_repository.py  terrain_features.py  weather_ingest.py  weather_repository.py
ingest/tests/: test_fire_likelihood.py  test_firms_ingest_denoiser_hook.py  test_spread_persistence.py  test_weather_ingest.py
ml/: README.md  __init__.py  calibration.py  denoiser_inference.py  eval_denoiser.py  eval_spread_calibration.py  eval_weather_bias_correction.py  pyproject.toml  spread_features.py  train_denoiser.py  train_spread_v1.py  train_weather_bias_corrector.py  weather_bias_analysis.py  weather_bias_correction.py
ml/denoiser/: build_features.py  dataset.py  export_snapshot.py  features.py  label_v1.py  label_v2.py  sql_safety.py
ml/spread/: __init__.py  contract.py  factory.py  heuristic_v0.py  hindcast_builder.py  hindcast_dataset.py  learned_v1.py  sanity_checks.py  service.py
ml/tests/: test_calibration.py  test_dataset_label_table_validation.py  test_denoiser_features.py  test_denoiser_inference.py  test_eval_denoiser_json_export.py  test_eval_reports.py  test_spread_contract.py  test_spread_factory.py  test_spread_features.py  test_spread_heuristic_v0.py  test_spread_hindcast_builder.py  test_spread_hindcast_dataset.py  test_spread_learned_v1_integration.py  test_spread_sanity_checks.py  test_spread_service.py  test_weather_bias_analysis_integration.py  test_weather_bias_analysis_metrics.py  test_weather_bias_correction.py
ui/: .dockerignore  Dockerfile  __init__.py  api_client.py  app.py  pyproject.toml  runtime_config.py  state.py
ui/.streamlit/: config.toml
ui/components/: __init__.py  click_details.py  forecast_status.py  legend.py  map_view.py  sidebar.py
ui/config/: constants.py  theme.py
ui/services/: api.py
ui/tests/: test_app_imports.py  test_fire_details_contract.py
(+91 files in other folders)
