[project]
name = "wildfire-nowcast-api"
version = "0.1.0"
description = "FastAPI backend for serving wildfire nowcast products."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.114.2,<0.115.0",
    "uvicorn[standard]>=0.27.1,<0.28.0",
    "pydantic>=2.8.2,<2.9.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

