[project]
name = "wildfire-nowcast-api"
version = "0.1.0"
description = "FastAPI backend for serving wildfire nowcast products."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.114.2,<0.115.0",
    "uvicorn[standard]>=0.27.1,<0.28.0",
    "pydantic>=2.8.2,<2.9.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "rasterio>=1.3.9,<1.4.0",
    "rioxarray>=0.15.5,<0.16.0",
    "xarray>=2023.0.0,<2025.0.0",
    "shapely>=2.1.0,<3.0.0",
    "httpx>=0.27.2",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "fastapi-limiter>=0.1.6",
    "numpy>=1.26.0,<2.1.0",
    "pandas>=2.1.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "dem-stitcher>=2.3.0,<3.0.0",
    "cfgrib>=0.9.10.4,<0.10.0",
    "rio-cogeo>=5.4.0,<6.0.0",
    "joblib>=1.3.0,<2.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "netcdf4>=1.6.0,<1.8.0",
    "h5netcdf>=1.3.0,<2.0.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.0,<4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
