[project]
name = "wildfire-nowcast-ingest"
version = "0.1.0"
description = "NASA FIRMS ingestion utilities for Wildfire Nowcast."
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.8.2,<2.9.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.26.0,<2.1.0",
    "xarray>=2024.5.0,<2025.0.0",
    "scipy>=1.11.0,<2.0.0",
    "cfgrib>=0.9.10.4,<0.10.0",
    "h5netcdf>=1.3.0,<2.0.0",
    "dem-stitcher>=2.3.0,<3.0.0",
    "rasterio>=1.3.9,<1.4.0",
    "rioxarray>=0.15.5,<0.16.0",
    "rio-cogeo>=5.4.0,<6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

