[project]
name = "wildfire-nowcast-ml"
version = "0.1.0"
description = "ML & data utilities for Wildfire Nowcast & Forecast."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.0",
    "pandas>=2.1.0,<3.0",
    "xarray>=2024.4.0,<2025.0",
    "rioxarray>=0.15.5,<0.16.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "pydantic>=2.8.2,<2.9.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "joblib>=1.3.0,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "netcdf4>=1.6.0,<1.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.6.0,<0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
