[project]
name = "wildfire-nowcast-ui"
version = "0.1.0"
description = "Streamlit UI for the Wildfire Nowcast & Forecast app."
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.34.0,<2.0.0",
    "folium>=0.15.0,<1.0.0",
    "streamlit-folium>=0.15.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.6.0,<0.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["ui", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

